# watcher

./: .clang-format  .dockerignore  .gitignore  .lgtm.yml  .tellfile  BUILD.bazel  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  a.out  changelog.md  cmake_install.cmake  container-devel  contributing.md  flake.nix  flake2.nix  license  meson.build  pyproject.toml  readme.md  release.yml  security.md  tmp  watch  watcher  wtr.test_watcher  wtr.test_watcher.asan  wtr.test_watcher.msan  wtr.test_watcher.tsan  wtr.test_watcher.ubsan  wtr.watcher  wtr.watcher.asan  wtr.watcher.msan  wtr.watcher.tsan  wtr.watcher.ubsan
.github/workflows/: android.yml  codeql.yml  dist.yml  libcwatcher-cross.yml  libcwatcher.yml  macos.yml  ubuntu.yml  watcher-py-wheels.yml  watcher-rs.yml  wheels.yml  windows.yml
.hooks/: pre-commit
devel/: .hone
devel/include/: .tellfile  readme.md
devel/include/test_watcher/: chrono.hpp  conf.hpp  constant.hpp  event.hpp  filesystem.hpp  is_verbose.hpp  perf.hpp  test_watcher.hpp  watch_gather.hpp
devel/include/watcher/: watcher.hpp
devel/include/watcher/detail/: watch.hpp
devel/include/wtr/: watcher.hpp
devel/include/wtr/watcher-/: event.hpp  watch.hpp
devel/include/wtr/watcher../: event.hpp  watch.hpp
devel/src/portable-destructive-rename/: main.c
devel/src/wtr/test_watcher/: readme.md  test_concurrency.cpp  test_concurrent_watch_targets.cpp  test_event_targets.cpp  test_new_directories.cpp  test_openclose.cpp  test_performance.cpp  test_simple.cpp  test_watch_targets.cpp
etc/wip-fsevents-issue/: .gitignore  build-and-test.sh  build.sh  fsevents-issue-c  fsevents-issue-cpp  fsevents-issue-cpp-asan  fsevents-issue-cpp-tsan  main.c  main.cpp
etc/wip-fsevents-issue/fsevents-issue-c.dSYM/Contents/: Info.plist
etc/wip-fsevents-issue/fsevents-issue-cpp-asan.dSYM/Contents/: Info.plist
etc/wip-fsevents-issue/fsevents-issue-cpp-tsan.dSYM/Contents/: Info.plist
etc/wip-fsevents-issue/fsevents-issue-cpp.dSYM/Contents/: Info.plist
include/: .tellfile  README.md  concepts.hpp  readme.md  watcher.hpp
include/test_watcher/: chrono.hpp  conf.hpp  constant.hpp  event.hpp  filesystem.hpp  test_watcher.hpp  watch_gather.hpp
include/watcher/: adapter.hpp  event.hpp  platform.hpp  run.hpp  status.hpp  watch.hpp  watcher.hpp
include/watcher/adapter/: adapter.hpp  andy.hpp  darwin.hpp  hog.hpp  lin.hpp  mac.hpp  macos.hpp  warthog.hpp  win.hpp
include/watcher/adapter/android/: watch.hpp
include/watcher/adapter/darwin/: notes.md  watch.hpp
include/watcher/adapter/linux/: watch.hpp
include/watcher/detail/: event.hpp  watch.hpp
include/wtr/: watcher.hpp
libcwatcher/: .gitignore  cross-compile.sh  meson.build
libcwatcher/cross-files/: aarch64-apple-darwin.txt  aarch64-unknown-linux-gnu.txt  x86_64-apple-darwin.txt  x86_64-unknown-linux-gnu.txt
libcwatcher/include/wtr/: watcher-cabi.h  watcher.hpp
libcwatcher/linux-cross-compilation-containers/: Dockerfile  build.sh
libcwatcher/src/: test-watcher-cabi.c  watcher-cabi.cpp
sinclude/watcher/: watcher.hpp
src/: .tellfile  README.md  main.cpp  tiny-main.cpp
src/bench_watcher/: bench_concurrent_watch_targets.cpp
src/bench_watcher/bench_concurrent_watch_targets/: bench_concurrent_watch_targets.cpp
src/test_watcher/: README.md  test_concurrent_watch_targets.cpp  test_new_directories.cpp  test_watch_targets.cpp
src/test_watcher/test_concurrent_watch_targets/: main.cpp  test_concurrent_watch_targets.cpp
src/test_watcher/test_directory_events/: main.cpp  test_directory_events.cpp
src/test_watcher/test_event_targets/: main.cpp
src/test_watcher/test_new_directories/: main.cpp  test_new_directories.cpp
src/test_watcher/test_regular_file_events/: main.cpp  test_regular_file_events.cpp
src/test_watcher/test_simple/: main.cpp  test_simple.cpp
src/test_watcher/test_watch_targets/: main.cpp  test_watch_targets.cpp
src/tiny_watcher/: main.cpp
src/watcher/: .tellfile  main.cpp  readme.md  tiny-main.cpp  tiny_main.cpp
src/wtr.watcher/: .tellfile  main.cpp
src/wtr/bench_watcher/: bench_concurrent_watch_targets.cpp
src/wtr/test_watcher/: readme.md  test_concurrent_watch_targets.cpp  test_new_directories.cpp  test_simple.cpp  test_watch_targets.cpp
src/wtr/tiny_watcher/: main.cpp
src/wtr/watcher/: .tellfile  main.cpp
tool/: build  bundle-artifacts  ccdb  cross  fetch-release-artifacts  format  hone  portable-cp  release  shasum.py  show-changelog-for-version  sl  sloc  sloct  slod  slodt  tree
tool/contain/: .tellfile  build  readme.md  run
tool/contain/lin/: .gitignore  Containerfile  Dockerfile
tool/contain/win/: Containerfile  Dockerfile
tool/gen-event/: dir  file  scan
tool/show/: sysres
tool/test/: .ctx  access-events-are-not-reported  all  create-and-rename-with-overwrite  create-and-rename-without-overwrite  create-dir-accuracy  create-file-accuracy  dir  manyrun  rename-dir-accuracy  rename-file-accuracy  rename-with-overwrite  rename-without-overwrite  scan
tools/: test-dir-watcher.sh  test-file-watcher.sh
tools/tests/: files
watcher-c/: .gitignore  cross-compile.sh  meson.build  readme.md  watcher-c.md
watcher-c/cross-files/: aarch64-apple-darwin.txt
watcher-c/include/wtr/: meson.build  watcher-c.h
watcher-c/linux-cross-compilation-containers/: Dockerfile.pahole  build-containers.sh
watcher-c/src/: test-watcher-c.c  watcher-c.cpp
watcher-nodejs/: .clang-format  binding.gyp  cwatcher_wrapper.cpp  example-usage.js  package-lock.json  package.json  tsconfig.json  watcher.test.js
watcher-nodejs/examples/: example-usage.js
watcher-nodejs/lib/: watcher-napi.cpp  watcher.ts
watcher-nodejs/tests/: watcher.test.js
watcher-nodejs/tool/: ccdb
watcher-py/: .gitignore  build.py  meson.build  pyproject.toml
watcher-py/watcher/: __init__.py  watcher.py
watcher-rb/: .gitignore  Gemfile  Rakefile  watcher.gemspec
watcher-rb/lib/: watcher.rb
watcher-rb/tool/: build
watcher-rs/: build.rs
watcher-rs/examples/: show-events.rs
watcher-rs/src/: lib.rs  main.rs
(+42 files in other folders)
