[build-system]
build-backend = "mesonpy"
requires = ["meson >= 0.61.5", "meson-python >= 0.14.0"]

[project]
name = "watcher"
version = "0.12.0"
authors = [{name = "Will"}]
homepage = "https://github.com/e-dant/watcher"
description = "Filesystem watcher. Works anywhere. Simple, efficient, and friendly."
license.text = "MIT"
keywords = ["watcher", "filesystem", "events", "async"]
packages = [{include = "watcher"}]

[tool.cibuildwheel]
skip = ["cp36-*", "cp37-*"]
free-threaded-support = true
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
manylinux-ppc64le-image = "manylinux2014"
manylinux-s390x-image = "manylinux2014"
manylinux-pypy_x86_64-image = "manylinux2014"
manylinux-pypy_i686-image = "manylinux2014"
manylinux-pypy_aarch64-image = "manylinux2014"
musllinux-x86_64-image = "musllinux_1_2"
musllinux-i686-image = "musllinux_1_2"
musllinux-aarch64-image = "musllinux_1_2"
musllinux-ppc64le-image = "musllinux_1_2"
musllinux-s390x-image = "musllinux_1_2"
